initial working state of modified app

--- a/firestore/manifest.json
+++ b/firestore/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "FriendlyEats",
-  "short_name": "FriendlyEats",
+  "name": "PrivateApp",
+  "short_name": "PrivateApp",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
