--- a/firestore/package.json
+++ b/firestore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fireats",
+  "name": "fireapp",
   "version": "0.0.0",
   "description": "Finished code for the Firestore codelab",
   "main": ".",
